add eq, ne, gt, lt, ge ,le